<resources>

    <string name="app_name">对讲机</string>
    <string name="loading">加载中…</string>
    <string name="ssid">WIFi名称：</string>
    <string name="room">群组名称：</string>
    <string name="contact">联系人</string>
    <string name="malfunction">报警信息</string>
    <string name="chatroom">聊天室</string>
    <string name="pressToJoinChat">加入聊天</string>
    <string name="releaseToExitChat">退出聊天</string>
    <string name="pressToSpeak">按下说话</string>
    <string name="releaseFinish">按下结束</string>
    <string name="pressToUseSpeaker">扬声器</string>
    <string name="releaseToUseEarpiece">听筒</string>
    <string name="InChatRoom">您已加入了聊天室</string>
    <string name="ExitChatRoom">您已离开了聊天室</string>
    <string name="DisconnectServer">您已与服务器断开连接</string>
    <string name="OutChatRoom">您还没有进入聊天室</string>
    <string name="microphonePermission">请授予麦克风权限</string>
    <string name="NoMoreData">没有更多的数据</string>
    <string name="settings">设置</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="reminder_bygy">白月工业提示您</string>
    <string name="Cancel">取消</string>
    <string name="Continue">继续</string>
    <string name="notification_update_info">请完善个人信息，是否前往设置？</string>
    <string name="notification_update_head_portrait">请上传您的头像，是否前往上传？</string>
    <string name="please_connect_wifi">您当前没有连接WiFi，是否前往连接？</string>
    <string name="remote_login">您的账号已在其他设备登录</string>
    <string name="MediaTest">音频测试</string>
    <string name="SetName">我的姓名</string>
    <string name="TypeInName">请输入姓名</string>
    <string name="ModifyName">修改姓名</string>
    <string name="ConfirmModification">确认修改</string>
    <string name="SetSpeakTime">单次说话时长</string>
    <string name="TypeInTime">输入时间</string>
    <string name="ModifySpeakTime">修改时长</string>
    <string name="LanguageSettings">语言设置</string>
    <string name="working">对讲机服务工作中</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载&#8230;</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <string name="ChooseLanguage">语言选择</string>
    <string name="Save">保存</string>
    <string name="lan_default">跟随系统</string>
    <string name="lan_chinese" translatable="false">简体中文</string>
    <string name="lan_en" translatable="false">English</string>
    <string name="lan_ja" translatable="false">日本語</string>

    <string name="accessibility_name">局域网对讲机(推荐开启)</string>
    <string name="accessibility_description">按键捕获</string>

    <string name="send_wlan_unicast">局域网单播</string>
    <string name="send_wlan_broadcast">局域网广播</string>
    <string name="send_wan">广域网</string>

    <string name="BasicSettings">基础设置</string>
    <string name="PersonalInformation">个人信息</string>
    <string name="Name">姓名</string>
    <string name="Company">单位</string>
    <string name="Department">部门</string>
    <string name="NetworkSettings">网络设置</string>
    <string name="VoiceServerSetting">语音服务器设置</string>

    <string name="IP">IP地址</string>
    <string name="Port">端口号</string>
    <string name="VoiceRoom">房间号</string>

    <string name="MessageServerSettings">消息服务器设置</string>
    <string name="WirelessNetworkSettings">无线网络设置</string>
    <string name="VersionAndShare">版本与分享</string>
    <string name="Version">版本查看</string>
    <string name="VersionUpdate">版本更新</string>
    <string name="Share">分享给好友</string>
    <string name="Logout">退出登录</string>

    <string name="camera_pop_camera">相机拍摄</string>
    <string name="camera_pop_album">从相册选取</string>
    <string name="camera_pop_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>

    <!--layout控件描述，无需翻译-->
    <string name="toggle_speak" translatable="false">Toggle speaker on/off</string>
    <string name="toggle_mic" translatable="false">Toggle microphone on/off</string>
    <string name="disconnect_call" translatable="false">Disconnect Call</string>

    <!--SharedPreferences引用，无需翻译-->
    <string name="pref_room_key" translatable="false">room_preference</string>
    <string name="language" translatable="false">language</string>

    <string name="copyright">Copyright © 2019 JSS Co., LTD. All rights reserved.</string>
    <string name="FloatWindowPermission">您没有打开悬浮窗权限，将接收不到消息推送和弹窗信息，点击这里设置</string>
    <string name="NotificationPermission">您没有打开通知权限，将不会显示弹窗信息，点击这里设置</string>
    <string name="StopPlay">停止播放</string>
    <string name="Delete">删除</string>
    <string name="channel_description">正在使用对讲机</string>
    <string name="Search">搜索</string>


    <string name="input_phoneNumber">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="InputPassword">输入密码（6&#8211;20位）</string>
    <string name="ConfirmPassword">确认密码（6&#8211;20位）</string>
    <string name="ForgetPassword">忘记密码</string>
    <string name="NewUserRegister">新用户注册</string>
    <string name="HaveAccount">已有账号</string>
    <string name="ReadRegisterProtocol">我已阅读并同意《用户注册协议》</string>
    <string name="Login">登录</string>
    <string name="register">注册</string>
    <string name="RegistrationProtocol">用户注册协议</string>
    <string name="ChatRoomId">聊天室编号</string>
    <string name="NameOrDepartment">联系人姓名或部门</string>
    <string name="EffectiveAfterRestart">重启后生效</string>
    <string name="NumberOfPeople">人数：</string>
    <string name="ChatTime">聊天时长：</string>
    <string name="TargetCancel">对方已取消</string>
    <string name="NetworkError">网络异常</string>
    <string name="WaitingTimeout">等待超时</string>
    <string name="TargetReject">对方已拒接</string>
    <string name="TargetBusy">对方忙线中</string>
    <string name="TargetUnanswered">对方暂时无人接听</string>
    <string name="SetHeadPortrait">设置头像</string>
    <string name="UploadHeadPortrait">请上传头像</string>
    <string name="NetworkUnavailable">当前网络不可用，请检查网络</string>
    <string name="uploading">上传中</string>
    <string name="UploadFailed">上传失败</string>
    <string name="UploadSuccess">上传成功</string>
    <string name="ServerError">服务器异常，上传失败</string>
    <string name="UnknownError">未知错误，上传失败</string>
    <string name="CutError">无法剪切选择的图片</string>
    <string name="EnterPhoneNumber">请输入手机号</string>
    <string name="EnterPassword">请输入密码</string>
    <string name="LessThanSixDigits">密码长度小于6位</string>
    <string name="EnterPasswordAgain">请再次输入密码</string>
    <string name="InconsistentPassword">两次输入的密码不一致</string>
    <string name="LoggingIn">登录中</string>
    <string name="LogInFailed">登录失败，</string>
    <string name="Registering">注册中</string>
    <string name="RegisterFailed">注册失败</string>
    <string name="RegisteredSuccess">注册成功</string>
    <string name="updating">更新中</string>
    <string name="UpdateSuccess">更新成功</string>
    <string name="UpdateFailed">更新失败</string>
    <string name="IPError">请输入正确的IP地址!</string>
    <string name="PortError">请输入正确的端口号!</string>
    <string name="EnterYorName">请输入姓名</string>
    <string name="EnterYourCompany">请输入单位</string>
    <string name="SelectDepartment">请输入选择部门</string>
    <string name="SelectYourDepartment">— 请选择部门 —</string>
    <string name="ExitCurrentRoom">请先结束当前聊天</string>
    <string name="ServerDisconnected">您与服务器已经断开连接</string>
    <string name="TargetOffline">对方不在线</string>
    <string name="EnterRoomId">请填写房间号</string>
    <string name="VoiceService">对讲机语音服务</string>
    <string name="UsingWalkieTalkie">正在使用对讲机</string>
    <string name="VoiceServiceRunning">对讲机语音服务运行中&#8230;</string>
    <string name="RealTimePushService">异常信息实时推送服务</string>
    <string name="RealTimePushServiceRunning">异常信息实时推送服务运行中&#8230;</string>
    <string name="HangUp">挂断</string>
    <string name="Answer">接听</string>
    <string name="InviteYouToMakeAVoiceCall">邀请您进行语音通话&#8230;</string>
    <string name="WaitingForAccept">正在等待对方接受邀请&#8230;</string>
    <string name="VersionCode">版本号</string>
    <string name="VersionView">版本查看</string>
    <string name="update_version">版本升级（%1$s）</string>
    <string name="update_version2" translatable="false">%1$s（%2$s</string>
    <string name="file_size_m" translatable="false">%1$sM</string>
    <string name="QrCodeShare">我的专属分享二维码</string>
    <string name="ShareTo">分享到</string>
    <string name="ShareToOthers">分享给他人</string>
    <string name="GeneratingQRCode">二维码生成中</string>
    <string name="VersionCodeNo">版 本 号：</string>
    <string name="ReleaseTime">发布时间：</string>
    <string name="UpdateLog">更新日志：</string>
    <string name="Download">下载</string>
    <string name="Searching">查询中&#8230;</string>
    <string name="warning_redownload">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您已经下载过该版本文件，是否直接安装？</string>
    <string name="CurrentVersion">当前版本：</string>
    <string name="LatestVersion">最新版本：</string>
    <string name="Later">以后再说</string>
    <string name="UpdateNow">现在更新</string>
    <string name="DownloadAgain">重新下载</string>
    <string name="InstallDirectly">直接安装</string>
    <string name="Downloaded">已下载：</string>
    <string name="TotalSize">总大小：</string>
    <string name="YourAppIsTheLatestVersion">您的软件是最新版本</string>
    <string name="ChangeAccount">切换账号</string>
    <string name="MainServerSettings">主服务器设置</string>
    <string name="PrimaryServerTips">如果您不填写，则采用默认的服务器地址进行登录</string>
    <string name="SaveToGallerySuccessfully">图片已保存到相册</string>
    <string name="LongPressToSave">（长按图片保存到相册）</string>
    <string name="OverMaxTalker">该聊天组的用户数量已达到上限</string>
    <string name="Exit">退出</string>
    <string name="LoginAgain">重新登录</string>

</resources>
