<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_slight"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <jp.co.shiratsuki.walkietalkie.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <EditText
        android:id="@+id/etMessageServerIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:digits="0123456789."
        android:hint="@string/IP"
        android:imeOptions="actionNext"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_18" />

    <EditText
        android:id="@+id/etMessageServerPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:hint="@string/Port"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_18" />

    <jp.co.shiratsuki.walkietalkie.widget.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/EffectiveAfterRestart"
        android:textSize="@dimen/sp_16" />

    <jp.co.shiratsuki.walkietalkie.widget.MyButton
        android:id="@+id/btn_modify"
        style="@style/button_common_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/ConfirmModification"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="@dimen/sp_20" />

</LinearLayout>
