<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_slight"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <jp.co.shiratsuki.walkietalkie.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <EditText
        android:id="@+id/et_nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:hint="@string/TypeInName"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_18" />

    <Button
        android:id="@+id/btn_modify"
        style="@style/button_common_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:enabled="false"
        android:text="@string/ConfirmModification"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="@dimen/sp_18" />
</LinearLayout>
