<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_popupwindow"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btn_camera_pop_camera"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/pop_first_selector"
        android:text="@string/camera_pop_camera"
        android:textAllCaps="false"
        android:textColor="@color/blue_sky"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_camera_pop_album"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@drawable/pop_last_selector"
        android:text="@string/camera_pop_album"
        android:textAllCaps="false"
        android:textColor="@color/blue_sky"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_camera_pop_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pop_single_selector"
        android:text="@string/camera_pop_cancel"
        android:textAllCaps="false"
        android:textColor="@color/blue_sky"
        android:textSize="18sp" />
</LinearLayout>